cursive-bootstrap/tests/ui/E-MOD/E-MOD-2455.cursive
// RUN: compile-fail
// DIAG: E-MOD-2455
// SPEC: 8.2
// DESC: Conflicting layout arguments

[[packed]]
[[align(8)]]  //~ ERROR E-MOD-2455: conflicting layout
record BadLayout {
    value: i32
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
